--- a/bachelorarbeit-template/latex_einstellungen/settings.tex
+++ b/bachelorarbeit-template/latex_einstellungen/settings.tex
@@ -36,7 +36,10 @@
 
 % Packet für Seitenrandabständex und Einstellung für Seitenränder
 \usepackage{geometry}
-\geometry{left=3.5cm, right=2cm, top=2.5cm, bottom=2cm}
+\geometry{left=3m, right=2cm, top=2cm, bottom=2cm}
+
+% Zeilenabstand von 1,5 Zeilen im gesamten Dokument
+\usepackage[onehalfspace]{setspace}
 
 % Paket für Boxen im Text
 \usepackage{fancybox}
